// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Set expressions Contains element 1`] = `
"
        (
            template_id (static_id 0 (\\"set.test.ts\\" 20))
            storage ()
            storage_type (\\"bool\\")
            messages ((ep1 True False False True (\\"set.test.ts\\" 23) ((set_type (params (\\"set.test.ts\\" 23)) (set \\"nat\\") (\\"set.test.ts\\" 28)) (set (data) (contains (params (\\"set.test.ts\\" 23)) (literal (nat 1) (\\"set.test.ts\\" 25)) (\\"set.test.ts\\" 25)) (\\"set.test.ts\\" 25)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"set.test.ts\\" 20))
        )
        "
`;

exports[`Set expressions Contains element 2`] = `
"{
    \\"micheline\\": \\"parameter (set %ep1 nat);\\\\nstorage   bool;\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == ep1 ==\\\\n    # self.data = params.contains(1) # @parameter\\\\n    PUSH nat 1; # nat : @parameter\\\\n    MEM;        # bool\\\\n    NIL operation; # list operation : bool\\\\n    PAIR;       # pair (list operation) bool\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bool\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"set\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"nat\\"
                            },
                            {
                                \\"int\\": \\"1\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"MEM\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBool)\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TSet(sp.TNat))\\\\n    self.data = params.contains(1)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Set expressions Get elements 1`] = `
"
        (
            template_id (static_id 0 (\\"set.test.ts\\" 9))
            storage ()
            storage_type ((list \\"nat\\"))
            messages ((ep1 True False False True (\\"set.test.ts\\" 12) ((set_type (params (\\"set.test.ts\\" 12)) (set \\"nat\\") (\\"set.test.ts\\" 17)) (set (data) (elements (params (\\"set.test.ts\\" 12)) (\\"set.test.ts\\" 14)) (\\"set.test.ts\\" 14)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"set.test.ts\\" 9))
        )
        "
`;

exports[`Set expressions Get elements 2`] = `
"{
    \\"micheline\\": \\"parameter (set %ep1 nat);\\\\nstorage   (list nat);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == ep1 ==\\\\n    # self.data = params.elements() # @parameter\\\\n    NIL nat;    # list nat : @parameter\\\\n    SWAP;       # @parameter : list nat\\\\n    ITER\\\\n      {\\\\n        CONS;       # list nat\\\\n      }; # list nat\\\\n    NIL nat;    # list nat : list nat\\\\n    SWAP;       # list nat : list nat\\\\n    ITER\\\\n      {\\\\n        CONS;       # list nat\\\\n      }; # list nat\\\\n    NIL operation; # list operation : list nat\\\\n    PAIR;       # pair (list operation) (list nat)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"list\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"set\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"nat\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"ITER\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"CONS\\"
                                }
                            ]
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"nat\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"ITER\\",
                        \\"args\\": [
                            [
                                {
                                    \\"prim\\": \\"CONS\\"
                                }
                            ]
                        ]
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TList(sp.TNat))\\\\n\\\\n  @sp.entry_point\\\\n  def ep1(self, params):\\\\n    sp.set_type(params, sp.TSet(sp.TNat))\\\\n    self.data = params.elements()\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;
